A lot of clean-up and refactoring

--- a/assets/css/lib/responsive.css
+++ b/assets/css/lib/responsive.css
@@ -141,8 +141,8 @@
 
 @media (max-width: 767px) {
   .container {
-    padding-right: 20px;
-    padding-left: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
     width: auto;
   }
   [class*="span-"]{
