--- a/assets/css/lib/typography.css
+++ b/assets/css/lib/typography.css
@@ -10,12 +10,12 @@ body {
 
 /* Headings
 /////////////////////////////////////////////////////////////////*/
-h1 { font-size:32px; line-height:1; margin:0.5em 0; font-weight: bold;}
-h2 { font-size:24px; line-height:1; margin:1em 0; font-weight: bold;}
-h3 { font-size:18px; line-height:1; margin:1em 0; font-weight: bold;}
-h4 { font-size:14px; line-height:1; margin:1em 0; }
-h5 { font-size:12px; margin:1em 0; }
-h6 { font-size:12px; }
+h1 { font-family: "ff-netto-web"; font-size: 2.0rem; line-height: 1; margin: 2em 0 1em; font-weight: bold;}
+h2 { font-family: "ff-netto-web"; font-size: 1.5rem; line-height: 1; margin: 2em 0 1em; font-weight: bold;}
+h3 { font-size: 1.0rem; margin: 1em 0; font-weight: bold;}
+h4 { font-size: 1.0rem; margin: 1em 0; font-weight: normal;}
+h5 { font-size: 1.0rem; margin: 1em 0; font-weight: normal;}
+h6 { font-size: 1.0rem; margin: 1em 0; font-weight: normal;}
 
 h1,h2,h3,h4,h5,h6 { color:#444;}
 h1 a,h2 a,h3 a,h4 a,h5 a,h6 a{ text-decoration: none;}
