--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,9 +28,18 @@
   margin: 0;
 }
 .page-header--image{
-  background-position: 0;
+  background-position: 0 0;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.page-header--about{
+  background-position: 0 0;
+}
+.page-header--vita{
+  background-position: 0% 0;
+}
+.page-header--events{
+  background-position: 100% 0;
 }
 .page-header--image .page-header__title{
   color: #fff;
