Link in page header is grey instead of red

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,7 +53,7 @@
   text-decoration: underline;
 }
 .page-header--image .page-header__lead a:hover{
-  color: #f55;
+  color: #aaa;
 }
 @media (max-width: 767px) {
   .page-header{
