--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,12 @@
 /* PAGE-HEADER for regular content pages
 /////////////////////////////////////////////////////////////////*/
 .page-header{
+  background: #e3e3e0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 50vh;
+  min-height: 100vh;
   padding: 3rem 0;
 }
 .page-header__title{
