--- a/assets/css/letters.css
+++ b/assets/css/letters.css
@@ -1,9 +1,13 @@
 /* LAYOUT
 /////////////////////////////////////////////////////////////////*/
-body{ font: 18px/1.5em 'Cutive Mono', monospace; }
 .letters_container {
-  width: 90%;
-  margin: 36px 5% 72px;
+  margin: 4rem 20px;
+}
+@media (min-width: 768px) {
+  .letters_container {
+    width: 710px;
+    margin: 4rem auto;
+  }
 }
 header{
   position: relative;
@@ -37,22 +41,51 @@ article section a:hover{
 
 /* LETTERS
 /////////////////////////////////////////////////////////////////*/
-.letters                { text-align: center;}
-.letters .section-title { margin-bottom: 50px; font-size: 18px; text-transform: none;}
-.letter-list            { text-align: center;}
-
-.letter                 { display: inline-block;}
-.letter__link > *       { box-sizing: border-box;}
-.letter__date           { color: #aaa; display: block; font-size: 14px; height: 33%; padding-top: 40px;}
-.letter__title          { margin: 0; display: block; height: 33%; padding-top: 40px;}
-.letter__readmore       { color: #aaa; display: block; font-size: 14px; height: 33%; opacity: 0; padding-top: 40px; transition: opacity 0.2s;}
-.letter__link:hover .letter__readmore{ opacity: 1;}
-
-.letter__link {
+.letters{
+  text-align: center;
+}
+.letters-list{
+  margin: 4rem 0;
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  .letters-list{
+    flex-direction: row;
+  }
+}
+.letter{
+}
+.letter__link > *{
+  box-sizing: border-box;
+}
+.letter__date{
+  color: #aaa;
   display: block;
-  height: 320px;
-  position: relative;
-  width: 280px;
+  font-size: 14px;
+  height: 33%;
+  padding-top: 40px;
+}
+.letter__title{
+  margin: 0;
+  display: block;
+  height: 33%;
+  padding-top: 40px;
+}
+.letter__readmore{
+  color: #aaa;
+  display: block;
+  font-size: 14px;
+  height: 33%;
+  opacity: 0;
+  padding-top: 40px;
+  transition: opacity 0.2s;
+}
+.letter__link:hover .letter__readmore{
+  opacity: 1;
+}
+.letter__link {
+  box-shadow: 0 .1em .25em rgba(0,0,0,0.1);
   background-color: #FFF;
   background-image:
     linear-gradient(
@@ -62,29 +95,29 @@ article section a:hover{
       hsla(0,0%,100%,.04) 67%,
       hsla(0,0%,0%,.03) 67%,
       hsla(0,0%,100%,.02));
-  box-shadow: 0 .1em .25em rgba(0,0,0,0.1);
+  display: block;
+  height: 320px;
+  margin-bottom: 1rem;
+  position: relative;
   transition: box-shadow 0.2s;
 }
 .letter__link:hover{
-    box-shadow: 0 .2em .5em rgba(0,0,0,0.2);
+  box-shadow: 0 .4em 1em rgba(0,0,0,0.2);
 }
+@media (min-width: 768px) {
 
-.remark { border-top: 1px solid #d4d5d3; clear: both; font-size: 14px; color: #aaa; margin-top: 50px; padding-top: 30px;}
+}
+.remark {
+  border-top: 1px solid #d4d5d3;
+  clear: both;
+  color: #aaa;
+  margin: 0;
+  padding-top: 2rem;
+}
 
 /* MEDIA QUERIES
 /////////////////////////////////////////////////////////////////*/
-@media (min-width: 320px) and (max-width: 480px) {
-  body{
-    font-size: 16px;
-  }
-}
 @media (max-width: 767px) {
   .letters-item h2    { margin: 60px 0 36px;}
   .letters-item-date  { top: -1.5em; left:0;}
-}
-@media (min-width: 768px) {
-  .letters_container {
-      width: 720px;
-      margin: 36px auto 72px;
-  }
 }
